--- a/assessment_scorm/styles.css
+++ b/assessment_scorm/styles.css
@@ -1,17 +1,19 @@
 body, html {
     margin: 0;
     padding: 0;
-    height: 100vh;
-    width: 100vw;
+    /* height: 100vh;
+    width: 100vw; */
+    align-items: center;
+    justify-content: center;
   }
 
   .container {
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     text-align: center;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center; */
+    justify-content: space-around;
     font-size: 24px;
     flex-direction: column;
   }
