--- a/assessment_scorm/styles.css
+++ b/assessment_scorm/styles.css
@@ -127,6 +127,10 @@ img.laptop-screen {
   display: none;
 }
 
+#scoreScreen{
+  display: none;
+}
+
 #homePage{
   display: none;
 }
@@ -218,6 +222,13 @@ img.laptop-screen {
 div#playSlide {
   flex: 1;
   background-color: black;
+  width: 100vw;
+  height: 100vh;
+  z-index: 999;
+  transform: translate(-50%, -50%);
+  position: fixed;
+  top: 50%;
+  left: 50%;
 }
 
 .scorm-title {
@@ -270,4 +281,140 @@ div#choices {
   height: 5%;
   display: flex;
   justify-content: center;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8); /* Adjust the alpha value for transparency */
+  z-index: 999; /* Make sure the backdrop is on top of other elements */
+  display: none; /* Initially hide the backdrop */
+}
+
+/* Optional: Style for a modal (centered in the screen) */
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 1.5%;
+  z-index: 1000; /* Make sure the modal is on top of the backdrop */
+  display: none; /* Initially hide the modal */
+  /* border-radius: 0.5vw; */
+  width: 25%;
+}
+
+.solid {
+  border-top: 0.1vw solid black;
+}
+
+.btn-modal-container{
+  display: flex;
+  width: 100%;
+  /* height: 3vw;
+  margin-top: 3vw; */
+  justify-content: center;
+}
+
+.btn-modal {
+  width: 25%;
+  /* border-radius: 2vw; */
+  border: 0.01vw solid black;
+  background-color: white;
+}
+
+.modal-header{
+  font-family: tahoma;
+  /* font-size: 1.5vw; */
+}
+
+.modal-body{
+  font-family: tahoma;
+  /* font-size: 1.3vw; */
+}
+
+.option-label {
+  pointer-events: none;
+  display: flex;
+  flex-direction: row-reverse;
+  width: 100%;
+  justify-content: flex-end;
+}
+
+.final-slide-content {
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 11;
+}
+
+.passed-card {
+  width: 40%;
+  height: 13%;
+  display: flex;
+  justify-content: center;
+  background-color: #91CF50;
+  /* background-color: #B70C12; */
+  margin-top: 23%;
+  z-index: 11;
+}
+
+.card-text {
+  /* font-size: 6vw; */
+  font-family: tahoma;
+  font-weight: 800;
+  color: white;
+  align-self: center;
+}
+
+.remarks-text{
+  font-family: tahoma;
+  /* font-size: 3.5vw; */
+  font-weight: 700;
+  margin-top: 3%;
+  color:#2c4b56;
+  text-align: center  ;
+}
+
+div#remarksTextFailed{
+  display: none;
+}
+
+.score-section {
+    width: 50%;
+}
+
+.score-text {
+  color: #2c4b56;
+  font-weight: 500;
+  font-family: tahoma;
+  margin: 5% 0;
+  /* font-size: 2.5vw; */
+}
+
+.btn-end {
+  width: 10%;
+  height: 7%;
+  font-family: tahoma;
+  border: 0;
+  background-color: #2c4b56;
+  color: white;
+  margin-top: 2%;
+}
+
+.final-instruction-text {
+  color: #2c4b56;
+  font-family: tahoma;
+  /* font-size: 2.5vw; */
+  margin: 4% 0;
 }
